<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="tweet">Tweet</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="_5">5</string>
    <string name="banner">Banner</string>
    <string name="name">Name</string>
    <string name="tagline">Tagline</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>

</resources>