<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".ProfileActivity"
tools:showIn="@layout/activity_profile">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rlUserHeader"
    android:background="#FFFFFF"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:ignore="RtlHardcoded,UselessParent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/ivProfileBannerImage"
        android:contentDescription="@string/banner" />

    <!--<com.makeramen.roundedimageview.RoundedImageView-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/ivProfileImage"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_below="@id/ivProfileBannerImage"-->
        <!--android:layout_marginLeft="12dp"-->
        <!--android:layout_marginTop="-30dp"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="80dp"-->
        <!--android:scaleType="fitCenter"-->
        <!--app:riv_corner_radius="4dip"-->
        <!--app:riv_oval="false" />-->

    <TextView
        android:id="@+id/tvFullName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/ivProfileImage"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/ivProfileBannerImage"
        android:text="@string/name"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/ivProfileImage"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tvFullName"
        android:text="@string/name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTagLine"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ivProfileImage"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tagline"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:lineSpacingMultiplier="1.1" />

    <TextView
        android:id="@+id/tvFollowingCount"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/tvTagLine"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:text="@string/_5"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvFollowing"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/tvTagLine"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/tvFollowingCount"
        android:fontFamily="sans-serif-light"
        android:text="@string/following"
        android:textSize="11sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvFollowersCount"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textColor="#000000"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/tvTagLine"
        android:layout_toRightOf="@id/tvFollowing"
        android:textSize="14sp"
        android:text="@string/_5" />

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/tvTagLine"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-light"
        android:layout_toRightOf="@id/tvFollowersCount"
        android:textSize="11sp"
        android:text="@string/followers"
        tools:ignore="SmallSp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/tvFollowersCount"/>
    <!--android:background="@color/twitter_blue" -->

</RelativeLayout>


</RelativeLayout>